force-app/main/default/objects/InsurancePolicyAsset/fields/GLB_P1_NumeroPolizaExterno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NumeroPolizaExterno__c</fullName>
    <label>Número de póliza externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>