force-app/main/default/objects/InsurancePolicyAsset/fields/GLBP1_Activo_Producto__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Activo_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activo (Producto)</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Activos de pólizas de seguros</relationshipLabel>
    <relationshipName>Activos_de_p_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>