force-app/main/default/objects/InsurancePolicyAsset/fields/GLBP1_Bien_declarado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Bien_declarado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bien declarado</label>
    <referenceTo>GLBP1_Bien_declarado__c</referenceTo>
    <relationshipLabel>Activos de pólizas de seguros</relationshipLabel>
    <relationshipName>Activos_de_p_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>