force-app/main/default/objects/InsurancePolicyAsset/fields/N_Poliza_externo__c.field-meta.xml
<CustomField>
    <fullName>N_Poliza_externo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N°Póliza externo</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Activos de pólizas de seguros</relationshipLabel>
    <relationshipName>Activos_de_p_lizas_de_seguros</relationshipName>
    <type>Lookup</type>
</CustomField>