force-app/main/default/objects/InsurancePolicyAsset/fields/vlocity_ins_fsc__AssetName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__AssetName__c</fullName>
    <description>DEPRECATED. Please use AssetName.</description>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>