force-app/main/default/objects/InsurancePolicyAsset/fields/vlocity_ins_fsc__ProductChildItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProductChildItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Child Item</label>
    <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
    <relationshipLabel>Insurance Policy Asset Product Child Items</relationshipLabel>
    <relationshipName>InsurancePolicyAssetProductChildItems</relationshipName>
    <type>Lookup</type>
</CustomField>