force-app/main/default/objects/InsurancePolicyAsset/fields/vlocity_ins_fsc__ProratedFeeAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__ProratedFeeAmount__c</fullName>
    <description>DEPRECATED. Please use TermFeeAmount.</description>
    <label>Prorated Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>