force-app/main/default/objects/InsurancePolicyAsset/fields/vlocity_ins_fsc__RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins_fsc__RecordTypeName__c</fullName>
    <formula>vlocity_ins_fsc__Product2Id__r.vlocity_ins__RecordTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Record Type Name</label>
    <type>Text</type>
</CustomField>